# gc2web

./: .gitignore  Date.py  EventDetail.py  EventDetails.py  Family.py  Gedcom.g4  Gedcom.ged  Gedcom1.ged  Gedcom3.ged  GedcomLine.py  GedcomParser.py  GedcomTags.py  GedcomTransmission.py  Individual.py  Name.py  Note.py  Place.py  PlantUMLCreator.py  PlantUMLEncoder.py  README.md  Repository.py  Source.py  SourcesMixin.py  astro.config.mjs  gen_plantuml.py  gen_site.py  init.sh  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  singleton.py  tailwind.config.cjs  test_date.py  tsconfig.json  vitest.config.ts  vitest.setup.ts
.devcontainer/: .env  Dockerfile  compose.yaml  devcontainer.json
.devcontainer/app/: init.sh  requirements.txt
.github/: copilot-instructions.md
antlr-parser/: Gedcom.g4  GedcomLine.py
gen_site/: Association.py  Date.py  EventDetail.py  Family.py  Footnote.py  GedcomLine.py  GedcomParser.py  GedcomTags.py  GedcomTransmission.py  Hoofman.ged  Individual.py  Name.py  Note.py  NotesMixin.py  README_text_comparison.md  Source.py  Witness.py  gen_chronology.py  gen_site.py  identify_witness.py  match_assocs.py  set_witness_ids.py  test_EventDetail.py  test_date.py  text_comparison.py  witness_ids.py
gen_site/adapter/: gedq_adapter.py
gen_site/antlr-parser/: GedcomLineListener.py  main.py
gen_site/model/: Association.py  EventDetail.py  Family.py  Footnote.py  Name.py  (+8 more)
src/: content.config.ts  last_modified.ts
website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs
(+878 files in other folders)
