[project]
name = "gc2web"
version = "0.1.0"
description = "Generate a static genealogy website from a GEDCOM file."
requires-python = ">=3.14"
dependencies = [
    "tqdm>=4.67.1",
    "pyyaml>=6.0.2",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "jsonschema>=4.25.1",
    "ruff",
    "pytest",
]

[tool.uv]
# gen_site is run as a script, not installed as a package — manage the env only.
package = false
